--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "express-session": "^1.17.0",
     "graphql-passport": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.10",
-    "nodemon": "^2.0.2",
     "passport": "^0.4.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -26,8 +26,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "mongo": "mongod",
-    "dev": "nodemon ./server.js"
+    "mongo": "mongod"
   },
   "author": "Diego",
   "license": "ISC"
